--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "gh-pages": "^3.1.0",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
-    "node-sass": "^4.14.1",
     "prettier-eslint": "^11.0.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -30,7 +29,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "remote-pay-cloud": "^3.1.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "sass": "^1.32.5"
   },
   "scripts": {
     "start": "react-scripts start",
