--- a/package.json
+++ b/package.json
@@ -80,5 +80,5 @@
     "trailingComma": "es5",
     "useTabs": false
   },
-  "homepage": "https://jwhitted-clover.github.io/virtual-keypad/"
+  "homepage": "https://clover.github.io/virtual-keypad/"
 }
